Updated the build instructions to cache the plugin data correctly
